Responsive header and nav

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="main2.css">
     <link rel="stylesheet" type="text/css" href="responsive.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   </head>
   <body>
 
@@ -182,5 +183,6 @@
         </ul>
       </footer>
     </main>
+    <script src="Script.js"></script>
   </body>
 </html>
